# cover-builder

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ac2aee111f0_coverimage_relationships_and_constraints.py  31bbd1949b6a_create_projects_and_brief_runs.py  7d9ecfba01fe_add_server_default_to_cover_images_.py  dabc816d9f43_create_cover_images.py
backend/app/: db.py  main.py  models.py  settings.py
backend/app/routes/: cover.py  projects.py
backend/app/schemas/: brief_runs.py  cover_brief.py  cover_image.py  projects.py
backend/app/services/: openai_client..py  openai_client.py
backend/app/services/stubs/: brief_response.json
frontend/: streamlit_app.py
